--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1697,7 +1697,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 2, 2, 422, 77
 }
 
-FORMPAGO DIALOG DISCARDABLE 162, 101, 287, 337
+FORMPAGO DIALOG DISCARDABLE 162, 101, 287, 364
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Formas de pago"
 FONT 8, "MS Sans Serif"
@@ -1728,12 +1728,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 66, 213, 70, 11
   CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 140, 213, 140, 11
   CONTROL "", 425, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 66, 241, 212, 101
-  CONTROL "Incluir en terminal punto de venta", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 271, 118, 10
-  CONTROL "", 410, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 68, 283, 212, 101
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 299, 40, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 124, 319, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 179, 319, 50, 14
-  CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 234, 319, 50, 14
+  CONTROL "Incluir en terminal punto de venta", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 270, 118, 10
+  CONTROL "", 410, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 68, 282, 212, 101
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 298, 40, 11
+  CONTROL "", 430, "Edit", WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 327, 214, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 124, 348, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 179, 348, 50, 14
+  CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 234, 348, 50, 14
   CONTROL "Emitir como ", -1, "Button", BS_GROUPBOX, 2, 95, 140, 52
   CONTROL "Aplazamientos", -1, "Button", BS_GROUPBOX, 144, 95, 140, 52
   CONTROL "Tipo de pago", -1, "Button", BS_GROUPBOX, 2, 30, 282, 62
@@ -1746,15 +1747,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nº de plazos", -1, "Static", WS_GROUP, 150, 110, 45, 8
   CONTROL "Días primer plazo", -1, "Static", WS_GROUP, 150, 122, 60, 8
   CONTROL "Días entre plazos", -1, "Static", WS_GROUP, 150, 134, 61, 8
-  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 2, 260, 282, 54
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 6, 288, 29, 8
-  CONTROL "Posición", -1, "Static", WS_GROUP, 6, 302, 32, 8
+  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 2, 259, 282, 54
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 6, 287, 29, 8
+  CONTROL "Posición", -1, "Static", WS_GROUP, 6, 301, 32, 8
   CONTROL "Código de pago para generación de factura electónica", -1, "Button", BS_GROUPBOX, 2, 230, 282, 28
   CONTROL "Entrega inicial %", -1, "Static", WS_GROUP, 150, 43, 57, 8
   CONTROL "Descuento %", -1, "Static", WS_GROUP, 150, 55, 49, 8
   CONTROL "Código pago", -1, "Static", WS_GROUP, 5, 244, 45, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 6, 162, 23, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 6, 175, 27, 8
+  CONTROL "Web", -1, "Button", BS_GROUPBOX, 2, 315, 282, 28
+  CONTROL "Código web", -1, "Static", WS_GROUP, 6, 328, 40, 8
 }
 
 DLGCOLUM DIALOG DISCARDABLE 41, 15, 182, 171
@@ -19194,7 +19197,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
 }
 
-FastFiltros DIALOG DISCARDABLE 9, 8, 673, 294
+FASTFILTROS DIALOG DISCARDABLE 9, 8, 673, 294
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
