--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19194,14 +19194,27 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
 }
 
-FastFiltros DIALOG DISCARDABLE 9, 8, 673, 294
+FASTFILTROS DIALOG DISCARDABLE 9, 8, 479, 325
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 310, "TXBrowse", 0x00200000, 216, 84, 449, 200
-  CONTROL "Generador de filtros", -1, "Button", BS_GROUPBOX, 212, 72, 457, 218
-  CONTROL "", 4001, "TXBrowse", 0x00200000, 6, 84, 201, 200
-  CONTROL "Filtros almacenados", -1, "Button", BS_GROUPBOX, 0, 72, 211, 218
+  CONTROL "", 300, "TXBrowse", 0x00200000, 3, 72, 473, 229
+}
+
+FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 461, 223
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 310, "TXBrowse", 0x00200000, 4, 14, 450, 202
+  CONTROL "Generador de filtros", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
+}
+
+FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 461, 223
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 310, "TXBrowse", 0x00200000, 4, 14, 450, 202
+  CONTROL "Filtros almacenados", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
 }
 
