--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19197,16 +19197,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
 }
 
-<<<<<<< HEAD
-FASTFILTROS DIALOG DISCARDABLE 9, 8, 479, 325
-=======
-FASTFILTROS DIALOG DISCARDABLE 9, 8, 673, 294
->>>>>>> bded2be0e4003912e78f08fe6f6189452ed88975
+FASTFILTROS DIALOG DISCARDABLE 9, 8, 479, 303
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "TXBrowse", 0x00200000, 3, 72, 473, 229
+  CONTROL "", 300, "TPages", WS_TABSTOP, 1, 72, 476, 230
 }
 
 FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 461, 223
