--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2877,45 +2877,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 351, 69, 64, 8
 }
 
-CHGFIELDS DIALOG DISCARDABLE 72, 79, 362, 197
+CHGFIELDS DIALOG DISCARDABLE 72, 79, 466, 308
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cambiar campos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 7, 22, 140, 300
-  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 149, 22, 205, 12
-  CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 52, 97, 12
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 7, 76, 140, 301
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 150, 76, 51, 100
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 203, 76, 120, 12
-  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 326, 76, 29, 100
-  CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 7, 91, 140, 300
-  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 150, 91, 51, 100
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 203, 91, 120, 12
-  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 326, 91, 29, 103
-  CONTROL "", 180, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 7, 106, 140, 300
-  CONTROL "", 190, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 150, 106, 51, 100
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 203, 106, 120, 12
-  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 326, 106, 29, 100
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 7, 120, 140, 300
-  CONTROL "", 230, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 150, 120, 51, 100
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 203, 120, 120, 12
-  CONTROL "", 250, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 326, 120, 29, 100
-  CONTROL "", 260, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 7, 135, 140, 300
-  CONTROL "", 270, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 150, 135, 51, 100
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 203, 135, 120, 12
-  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 2, 41, 358, 111
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 2, 152, 358, 21
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 254, 179, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 309, 179, 50, 14
-  CONTROL "Cambiar", -1, "Button", BS_GROUPBOX, 2, 3, 358, 37
-  CONTROL "Campo", -1, "Static", WS_GROUP, 7, 12, 60, 8
-  CONTROL "Expresión", -1, "Static", WS_GROUP, 149, 12, 60, 8
-  CONTROL "", 290, "TMeter", 0x00000000, 7, 161, 348, 8
-  CONTROL "Campo", -1, "Static", WS_GROUP, 7, 67, 60, 8
-  CONTROL "Condición", -1, "Static", WS_GROUP, 150, 67, 49, 8
-  CONTROL "Valor", -1, "Static", WS_GROUP, 203, 67, 49, 8
-  CONTROL "Nexo", -1, "Static", WS_GROUP, 326, 67, 27, 8
+  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 6, 24, 186, 300
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 194, 24, 264, 12
+  CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 54, 97, 10
+  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 2, 43, 460, 230
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 358, 288, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 413, 288, 50, 14
+  CONTROL "Cambiar", -1, "Button", BS_GROUPBOX, 2, 3, 460, 38
+  CONTROL "Campo", -1, "Static", WS_GROUP, 7, 14, 60, 8
+  CONTROL "Expresión", -1, "Static", WS_GROUP, 194, 14, 60, 8
+  CONTROL "", 290, "TMeter", 0x00000000, 2, 276, 460, 4
+  CONTROL "", 310, "TXBrowse", 0x00200000, 6, 67, 452, 202
 }
 
 GETIMPFAC DIALOG DISCARDABLE 68, 31, 402, 234
@@ -19202,22 +19179,30 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "TPages", WS_TABSTOP, 1, 72, 476, 230
+  CONTROL "", 4001, "SysTabControl32", 0x00000000, 44, 29, 432, 248
+  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 369, 284, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 424, 284, 50, 14
 }
 
 FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 461, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 310, "TXBrowse", 0x00200000, 4, 14, 450, 202
+  CONTROL "", 200, "TXBrowse", 0x00200000, 4, 28, 450, 188
   CONTROL "Generador de filtros", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
+  CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 4, 12, 50, 14
+  CONTROL "Guardar", 110, "Button", WS_TABSTOP, 59, 12, 50, 14
+  CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 114, 12, 50, 14
 }
 
 FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 461, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 310, "TXBrowse", 0x00200000, 4, 14, 450, 202
+  CONTROL "", 200, "TXBrowse", 0x00200000, 4, 28, 450, 188
   CONTROL "Filtros almacenados", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
+  CONTROL "Cargar", 100, "Button", WS_TABSTOP, 4, 12, 50, 14
+  CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 59, 12, 50, 14
 }
 
