--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2877,22 +2877,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 351, 69, 64, 8
 }
 
-CHGFIELDS DIALOG DISCARDABLE 72, 79, 466, 308
+CHANGEFIELDS DIALOG DISCARDABLE 72, 79, 454, 323
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cambiar campos"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 6, 24, 186, 300
-  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 194, 24, 264, 12
-  CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 54, 97, 10
-  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 2, 43, 460, 230
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 358, 288, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 413, 288, 50, 14
-  CONTROL "Cambiar", -1, "Button", BS_GROUPBOX, 2, 3, 460, 38
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 194, 24, 250, 12
+  CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 54, 97, 10
+  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 2, 43, 448, 246
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 344, 305, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 399, 305, 50, 14
+  CONTROL "Cambiar", -1, "Button", BS_GROUPBOX, 2, 3, 448, 38
   CONTROL "Campo", -1, "Static", WS_GROUP, 7, 14, 60, 8
   CONTROL "Expresión", -1, "Static", WS_GROUP, 194, 14, 60, 8
-  CONTROL "", 290, "TMeter", 0x00000000, 2, 276, 460, 4
-  CONTROL "", 310, "TXBrowse", 0x00200000, 6, 67, 452, 202
+  CONTROL "", 290, "TMeter", 0x00000000, 2, 293, 442, 4
+  CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 6, 67, 50, 14
+  CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 60, 67, 50, 14
+  CONTROL "", 200, "TXBrowse", 0x00200000, 6, 83, 436, 202
 }
 
 GETIMPFAC DIALOG DISCARDABLE 68, 31, 402, 234
@@ -19174,35 +19176,33 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
 }
 
-FASTFILTROS DIALOG DISCARDABLE 9, 8, 479, 303
+FASTFILTROS DIALOG DISCARDABLE 9, 8, 490, 294
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 4001, "SysTabControl32", 0x00000000, 44, 29, 432, 248
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 29, 444, 242
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 369, 284, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 424, 284, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 275, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 275, 50, 14
 }
 
-FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 461, 223
+FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 439, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 200, "TXBrowse", 0x00200000, 4, 28, 450, 188
-  CONTROL "Generador de filtros", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
-  CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 4, 12, 50, 14
-  CONTROL "Guardar", 110, "Button", WS_TABSTOP, 59, 12, 50, 14
-  CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 114, 12, 50, 14
+  CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
+  CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 57, 4, 50, 14
+  CONTROL "Guardar filtro", 110, "Button", WS_TABSTOP, 378, 4, 60, 14
+  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
 }
 
-FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 461, 223
+FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 440, 223
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 200, "TXBrowse", 0x00200000, 4, 28, 450, 188
-  CONTROL "Filtros almacenados", -1, "Button", BS_GROUPBOX, 0, 2, 458, 218
-  CONTROL "Cargar", 100, "Button", WS_TABSTOP, 4, 12, 50, 14
-  CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 59, 12, 50, 14
+  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "Cargar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
+  CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 57, 4, 50, 14
 }
 
