--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2121,15 +2121,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 154, 223, 202, 11
   CONTROL "", 315, "Edit", WS_BORDER|WS_TABSTOP, 98, 236, 54, 11
   CONTROL "", 316, "Edit", WS_BORDER|WS_TABSTOP, 154, 236, 202, 11
-  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 147, 36, 11
-  CONTROL "", 101, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 147, 36, 11
-  CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 159, 36, 11
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 171, 36, 11
-  CONTROL "Operar con punto verde", 157, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 184, 89, 10
-  CONTROL "Totalizar albaranes", 156, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 197, 73, 10
-  CONTROL "No editar sus datos en ventas", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 210, 121, 10
-  CONTROL "", 232, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 437, 222, 50, 11
-  CONTROL "", 233, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 437, 235, 50, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 145, 36, 11
+  CONTROL "", 102, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 145, 36, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 158, 36, 11
+  CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 171, 36, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 184, 36, 11
+  CONTROL "Operar con punto verde", 157, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 198, 89, 10
+  CONTROL "Totalizar albaranes", 156, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 211, 73, 10
+  CONTROL "No editar sus datos en ventas", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 224, 121, 10
+  CONTROL "", 232, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 236, 36, 11
+  CONTROL "", 233, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 236, 36, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 47, 39, 32, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 47, 51, 29, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 47, 65, 32, 8
@@ -2143,7 +2144,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Color", -1, "Static", WS_GROUP, 363, 117, 39, 8
   CONTROL "Móvil", -1, "Static", WS_GROUP, 363, 91, 22, 8
   CONTROL "Fax", -1, "Static", WS_GROUP, 363, 78, 13, 8
-  CONTROL "Precios / Dto.", -1, "Static", WS_GROUP, 363, 150, 48, 8
+  CONTROL "Precio/Comb.", -1, "Static", WS_GROUP, 363, 148, 48, 8
   CONTROL "Tarifa persnlz.", -1, "Static", WS_GROUP, 47, 149, 48, 8
   CONTROL "Forma pago", -1, "Static", WS_GROUP, 47, 162, 38, 8
   CONTROL "Remesa", -1, "Static", WS_GROUP, 47, 175, 35, 8
@@ -2151,10 +2152,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Agente", -1, "Static", WS_GROUP, 47, 200, 24, 8
   CONTROL "Grupo", -1, "Static", WS_GROUP, 47, 213, 33, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 47, 226, 30, 8
-  CONTROL "Serie ", -1, "Static", WS_GROUP, 363, 162, 22, 8
-  CONTROL "Nº copias", -1, "Static", WS_GROUP, 363, 174, 35, 8
-  CONTROL "Primer día pago", -1, "Static", WS_GROUP, 363, 225, 55, 8
-  CONTROL "Segundo día pago", -1, "Static", WS_GROUP, 363, 238, 65, 8
+  CONTROL "Serie ", -1, "Static", WS_GROUP, 363, 174, 22, 8
+  CONTROL "Nº copias", -1, "Static", WS_GROUP, 363, 187, 35, 8
+  CONTROL "1º/2º día pago", -1, "Static", WS_GROUP, 363, 239, 49, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 112
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 139, 316, 110
   CONTROL "", -1, "Button", BS_GROUPBOX, 362, 139, 130, 110
@@ -2163,6 +2163,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "E-mail", -1, "Static", WS_GROUP, 47, 129, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos generales del cliente ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 364, 160, 48, 8
 }
 
 CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 254
