--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19185,8 +19185,8 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 29, 444, 242
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 275, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 275, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 276, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 276, 50, 14
 }
 
 FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 439, 223
@@ -19206,5 +19206,25 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
   CONTROL "Cargar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
   CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 57, 4, 50, 14
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_EIRE
+
+FASTREPLACE DIALOG DISCARDABLE 9, 8, 490, 348
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Reemplazar campos"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 50, 48, 182, 222
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 234, 48, 250, 12
+  CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 46, 69, 97, 10
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 81, 444, 242
+  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 329, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 329, 50, 14
+  CONTROL "Cambiar", -1, "Button", BS_GROUPBOX, 44, 27, 446, 38
+  CONTROL "Campo", 4001, "Static", WS_GROUP, 50, 38, 27, 8
+  CONTROL "Expresión", 4002, "Static", WS_GROUP, 234, 38, 60, 8
+  CONTROL "Reemplazar campos de las bases de datos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
 }
 
