--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19215,7 +19215,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Reemplazar campos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 50, 48, 182, 222
+  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 50, 48, 182, 222
   CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 234, 48, 250, 12
   CONTROL "Todos los registros", 70, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 46, 69, 97, 10
   CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 81, 444, 242
