--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12205,53 +12205,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "msctls_progress32", 0x00000000, 8, 188, 405, 4
 }
 
-LPRODUCIDO DIALOG DISCARDABLE 144, 103, 378, 162
+LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 182
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Materia primas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 11
-  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 11
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 23, 68, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 68, 11
-  CONTROL "", 222, "Edit", WS_BORDER, 144, 35, 227, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 47, 68, 11
-  CONTROL "", 232, "Edit", WS_BORDER, 144, 47, 227, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 59, 68, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 71, 68, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 83, 68, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 95, 68, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 69, 53, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 69, 20, 11
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 69, 53, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 82, 53, 11
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 82, 20, 11
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 82, 53, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 95, 30, 11
-  CONTROL "", 191, "Edit", WS_BORDER, 223, 95, 148, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 113, 68, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 112, 75, 11
-  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 2, 132, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 216, 132, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 271, 132, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 326, 132, 50, 14
-  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 126
-  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 62, 23, 8
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 86, 50, 8
-  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 74, 34, 8
-  CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 109, 365, 1
-  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 114, 44, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 98, 23, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 116, 26, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 98, 31, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 72, 20, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 85, 30, 8
-  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 72, 37, 8
-  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 85, 42, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 50, 51, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 38, 51, 8
-  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
+  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 152, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 152, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 152, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 146
 }
 
 MAQUINA DIALOG DISCARDABLE 64, 85, 610, 350
@@ -19224,5 +19186,76 @@ FONT 8, "MS Sans Serif"
   CONTROL "Campo", 4001, "Static", WS_GROUP, 50, 38, 27, 8
   CONTROL "Expresión", 4002, "Static", WS_GROUP, 234, 38, 60, 8
   CONTROL "Reemplazar campos de las bases de datos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 378, 130
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 11
+  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 11
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 23, 68, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 68, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 144, 35, 227, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 47, 68, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 144, 47, 227, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 59, 68, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 71, 68, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 83, 68, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 95, 68, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 69, 53, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 69, 20, 11
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 69, 53, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 82, 53, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 82, 20, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 82, 53, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 95, 30, 11
+  CONTROL "", 191, "Edit", WS_BORDER, 223, 95, 148, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 113, 68, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 112, 75, 11
+  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 126
+  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 62, 23, 8
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 86, 50, 8
+  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 74, 34, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 109, 365, 1
+  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 114, 44, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 98, 23, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 116, 26, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 98, 31, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 72, 20, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 85, 30, 8
+  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 72, 37, 8
+  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 85, 42, 8
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 50, 51, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 38, 51, 8
+  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
+}
+
+LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 130
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 60, 11
+  CONTROL "", 101, "Edit", WS_BORDER, 135, 11, 234, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 23, 60, 11
+  CONTROL "", 111, "Edit", WS_BORDER, 135, 23, 234, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 60, 11
+  CONTROL "", 121, "Edit", WS_BORDER, 135, 35, 234, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 74, 47, 60, 11
+  CONTROL "", 131, "Edit", WS_BORDER, 135, 47, 234, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 74, 59, 60, 11
+  CONTROL "", 141, "Edit", WS_BORDER, 135, 59, 234, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 74, 71, 60, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 135, 71, 234, 11
+  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 126
+  CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 8, 14, 56, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 8, 26, 27, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 8, 38, 45, 8
+  CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 50, 35, 8
+  CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 62, 41, 8
+  CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 74, 39, 8
 }
 
