--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -8,7 +8,7 @@ LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
 1 MANIFEST "WindowsXP.Manifest"
 
-GESTOOL ICON "..\Bmp\Gestool.ico"
+GESTOOL ICON "..\\Bmp\\Gestool.ico"
 
 USER1_HAMMER_16 BITMAP "..\\bmp\\user1_hammer_16.bmp"
 
@@ -19455,3 +19455,34 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 400, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Establecer filtros", -1, "Static", WS_GROUP, 44, 3, 57, 8
 }
+
+FastFiltros DIALOG DISCARDABLE 9, 8, 490, 294
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Generador de filtros"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 29, 444, 242
+  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 276, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 276, 50, 14
+}
+
+FASTFILTROS_ALMACENADOS DIALOG DISCARDABLE 9, 8, 440, 223
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+  CONTROL "Cargar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
+  CONTROL "Eliminar", 110, "Button", WS_TABSTOP, 57, 4, 50, 14
+}
+
+FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 439, 223
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Inicializar", 100, "Button", WS_TABSTOP, 2, 4, 50, 14
+  CONTROL "Eliminar linea", 120, "Button", WS_TABSTOP, 57, 4, 50, 14
+  CONTROL "Guardar filtro", 110, "Button", WS_TABSTOP, 378, 4, 60, 14
+  CONTROL "", 200, "TXBrowse", 0x00200000, 2, 20, 436, 202
+}
+
