--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2373,7 +2373,7 @@ FONT 14, "Segoe UI"
   CONTROL "", 120, "Button", WS_TABSTOP, 132, 1, 24, 16
   CONTROL "", 150, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 57, 56, 99, 12
   CONTROL "Total Venta", 100, "Static", WS_GROUP, 1, 2, 105, 15
-  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 1, 18, 155, 37
+  CONTROL "", 130, "TXBrowse", 0x00200000, 1, 18, 155, 37
   CONTROL "", 140, "TXBrowse", WS_TABSTOP|0x00800000, 1, 56, 55, 77
   CONTROL "20", 180, "Button", WS_TABSTOP, 82, 69, 24, 16
   CONTROL "50", 170, "Button", WS_TABSTOP, 57, 69, 24, 16
