--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -74,3 +74,7 @@ Creditcards_24 BITMAP "..\\bmp\\Creditcards_24.bmp"
 MoneyBag_24 BITMAP "..\\bmp\\MoneyBag_24.bmp"
 Percent_24 BITMAP "..\\bmp\\Percent_24.bmp"
 ShoppingBasket_24 BITMAP "..\\bmp\\ShoppingBasket_24.bmp"
+delete2_24 BITMAP "..\\bmp\\delete2_24.bmp"
+printer_ok BITMAP "..\\bmp\\printer_ok.bmp"
+printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
+printer_new BITMAP "..\\bmp\\printer_new.bmp"
