Campos nuevos de produccion

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -356,8 +356,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "General", -1, "Button", BS_GROUPBOX, 44, 29, 336, 36
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 251
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 67, 336, 69
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 176, 336, 104
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 138, 208, 37
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 138, 336, 81
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 76, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 39, 33, 14
@@ -376,38 +375,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 357, "TBitmap", 0x00800000, 363, 110, 14, 11
   CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 122, 56, 11
   CONTROL "", 391, "Edit", WS_BORDER, 156, 122, 221, 11
-  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 148, 73, 10
-  CONTROL "Obsoleto", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 161, 44, 10
-  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 157, 148, 90, 10
-  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 169, 161, 55, 10
-  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 262, 148, 88, 10
-  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 297, 160, 80, 11
-  CONTROL "Incluir en táctil", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 182, 59, 10
-  CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 193, 40, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 98, 206, 279, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 98, 219, 279, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 98, 232, 279, 11
-  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 98, 245, 87, 84
-  CONTROL "", 450, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 292, 245, 85, 84
-  CONTROL "", 460, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 292, 260, 85, 84
+  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 148, 73, 10
+  CONTROL "Obsoleto", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 161, 44, 10
+  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 174, 90, 10
+  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 109, 187, 55, 10
+  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 233, 88, 10
+  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 245, 80, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
   CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 49, 77, 33, 8
   CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 89, 47, 8
-  CONTROL "Texto táctil", -1, "Static", WS_GROUP, 49, 208, 47, 8
-  CONTROL "Imagen táctil", -1, "Static", WS_GROUP, 49, 235, 45, 8
   CONTROL "Categoría", -1, "Static", WS_GROUP, 49, 101, 35, 8
   CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 125, 47, 8
-  CONTROL "Posición", -1, "Static", WS_GROUP, 49, 196, 32, 8
-  CONTROL "Impresora comanda", -1, "Static", WS_GROUP, 201, 248, 67, 8
-  CONTROL "Impresora copia comanda", -1, "Static", WS_GROUP, 201, 263, 87, 8
   CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 113, 41, 8
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
-  CONTROL "Actual", -1, "Static", WS_GROUP, 262, 163, 25, 8
-  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 255, 138, 125, 37
-  CONTROL "Color botón", -1, "Static", WS_GROUP, 49, 222, 41, 8
-  CONTROL "Orden", -1, "Static", WS_GROUP, 49, 248, 25, 8
+  CONTROL "Actual", -1, "Static", WS_GROUP, 49, 248, 25, 8
+  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 223, 336, 37
+  CONTROL "Producto terminado", 620, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 97, 201, 90, 10
 }
 
 ARTKITCAT DIALOG DISCARDABLE 30, 106, 311, 105
@@ -8527,25 +8512,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Calcular por", -1, "Button", BS_GROUPBOX, 2, 91, 143, 85
 }
 
-ADVANTAGEAUDITOR DIALOG DISCARDABLE 15, 83, 646, 460
+ADVANTAGEAUDITOR DIALOG DISCARDABLE 15, 83, 646, 478
 STYLE WS_POPUP|DS_MODALFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Auditoria"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "OK", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 590, 42, 50, 36
   CONTROL "", -1, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 247, 41, 75, 11
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 247, 54, 75, 11
-  CONTROL "Desde", -1, "Static", WS_GROUP, 205, 44, 23, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 205, 57, 21, 8
-  CONTROL "Proced", 150, "Button", WS_TABSTOP, 530, 42, 50, 36
-  CONTROL "Añadir", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 42, 48, 10
-  CONTROL "Modificar", 141, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 55, 48, 10
-  CONTROL "Eliminar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 69, 48, 10
-  CONTROL "Operaciones:", -1, "Static", WS_GROUP, 335, 44, 47, 8
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 74, 41, 123, 84
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 74, 81, 566, 184
-  CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 74, 268, 566, 184
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 55, 44, 586, 412
+  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 591, 460, 50, 14
 }
 
 INF_CLI01 DIALOG DISCARDABLE -2, -14, 406, 244
@@ -19232,6 +19206,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 50, 51, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 38, 51, 8
   CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
+  CONTROL "Producto terminado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 272, 113, 75, 10
 }
 
 LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 130
@@ -19257,5 +19232,57 @@ FONT 8, "MS Sans Serif"
   CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 50, 35, 8
   CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 62, 41, 8
   CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 74, 39, 8
+}
+
+ADVANTAGEAUDITOR_OPERACIONES DIALOG DISCARDABLE 15, 83, 572, 418
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 3, 75, 11
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 15, 75, 11
+  CONTROL "Desde", -1, "Static", WS_GROUP, 135, 6, 23, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 135, 18, 21, 8
+  CONTROL "Proced", 150, "Button", WS_TABSTOP, 517, 3, 50, 36
+  CONTROL "Añadir", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 315, 4, 48, 10
+  CONTROL "Modificar", 141, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 315, 16, 48, 10
+  CONTROL "Eliminar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 315, 28, 48, 10
+  CONTROL "Operaciones:", -1, "Static", WS_GROUP, 265, 6, 47, 8
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 2, 2, 123, 84
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 2, 42, 566, 184
+  CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 2, 229, 566, 184
+}
+
+ADVANTAGEAUDITOR_BLOQUEOS DIALOG DISCARDABLE 15, 83, 571, 460
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 42, 566, 396
+  CONTROL "Proced", 150, "Button", WS_TABSTOP, 517, 3, 50, 36
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+ART_TACTIL DIALOG DISCARDABLE 36, 16, 496, 306
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 120
+  CONTROL "Incluir en táctil", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 36, 59, 10
+  CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 47, 40, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 139, 60, 348, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 139, 73, 348, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 139, 86, 348, 11
+  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 139, 99, 87, 84
+  CONTROL "", 450, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 114, 85, 84
+  CONTROL "", 460, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 129, 85, 84
+  CONTROL "Texto táctil", -1, "Static", WS_GROUP, 49, 62, 47, 8
+  CONTROL "Imagen táctil", -1, "Static", WS_GROUP, 49, 89, 45, 8
+  CONTROL "Posición", -1, "Static", WS_GROUP, 49, 50, 32, 8
+  CONTROL "Impresora comanda", -1, "Static", WS_GROUP, 49, 117, 67, 8
+  CONTROL "Impresora copia comanda", -1, "Static", WS_GROUP, 49, 132, 87, 8
+  CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "Propiedades para el terminal punto de venta táctil", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "Color botón", -1, "Static", WS_GROUP, 49, 76, 41, 8
+  CONTROL "Orden", -1, "Static", WS_GROUP, 49, 102, 25, 8
 }
 
