--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7200,10 +7200,11 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Producción"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 510, 397, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 565, 397, 50, 14
-  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 620, 397, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 565, 397, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 620, 397, 50, 14
   CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 2, 669, 392
+  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 2, 397, 50, 14
+  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 58, 397, 50, 14
 }
 
 COSTESMAQUINA DIALOG DISCARDABLE 83, 73, 283, 68
@@ -7243,7 +7244,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 253, 76, 65, 11
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 320, 76, 180, 11
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 253, 88, 65, 11
-  CONTROL "TBitmap", 141, "TBitMap", 0x00800000, 320, 88, 18, 11
+  CONTROL "TBitmap", 141, "TBitmap", 0x00800000, 320, 88, 18, 11
   CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 371, 88, 129, 11
   CONTROL "Añadir [F2]", 500, "Button", WS_TABSTOP, 50, 123, 50, 14
   CONTROL "Modificar [F3]", 501, "Button", WS_TABSTOP, 105, 123, 50, 14
@@ -7273,6 +7274,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Alm. origen", -1, "Static", WS_GROUP, 213, 67, 40, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Parte de produción", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "0", 814, "Static", SS_RIGHT|WS_GROUP, 581, 90, 75, 9
+  CONTROL "TOTAL PARTE", -1, "Static", WS_GROUP, 520, 91, 55, 8
 }
 
 PRODUCCION_2 DIALOG DISCARDABLE 97, 39, 670, 375
