--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15055,7 +15055,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ART_logistica DIALOG DISCARDABLE 36, 16, 496, 361
+ART_LOGISTICA DIALOG DISCARDABLE 36, 16, 496, 361
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -19213,7 +19213,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 50, 51, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 38, 51, 8
   CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
-  CONTROL "Producto terminado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 272, 113, 75, 10
 }
 
 LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 130
