--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15161,23 +15161,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 121, "Edit", WS_BORDER, 144, 23, 227, 11
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 68, 11
   CONTROL "", 131, "Edit", WS_BORDER, 144, 35, 227, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 74, 47, 43, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 74, 47, 48, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 59, 68, 11
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 71, 68, 11
-  CONTROL "Aplicar atípicas de clientes o tarifa de artículo", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 87, 158, 10
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 99, 68, 11
+  CONTROL "Aplicar atípicas de clientes o tarifa de artículo", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 87, 157, 10
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 100, 68, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_BORDER, 74, 121, 68, 11
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 266, 140, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 321, 140, 50, 14
-  CONTROL "Cajas ", 141, "Static", WS_GROUP, 8, 62, 23, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 8, 74, 34, 8
-  CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
+  CONTROL "Cajas ", 141, "Static", WS_GROUP, 8, 62, 25, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 8, 74, 35, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 30, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 117, 365, 1
-  CONTROL "Precio", 171, "Static", WS_GROUP, 8, 102, 23, 8
-  CONTROL "Importe", 181, "Static", WS_GROUP, 8, 124, 26, 8
-  CONTROL "Propiedad 2", 132, "Static", WS_GROUP, 8, 38, 51, 8
-  CONTROL "Propiedad 1", 122, "Static", WS_GROUP, 8, 26, 51, 8
-  CONTROL "Impuestos", -1, "Static", WS_GROUP, 8, 50, 23, 8
+  CONTROL "Precio", 171, "Static", WS_GROUP, 8, 103, 25, 8
+  CONTROL "Importe", 181, "Static", WS_GROUP, 8, 124, 29, 8
+  CONTROL "Propiedad 2", 132, "Static", WS_GROUP, 8, 38, 43, 8
+  CONTROL "Propiedad 1", 122, "Static", WS_GROUP, 8, 26, 43, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 8, 50, 37, 8
 }
 
 ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 315
@@ -15238,31 +15238,31 @@ FACAUT_1 DIALOG DISCARDABLE 16, -70, 670, 458
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 42, 40, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 54, 291, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 93, 81, 41, 11
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 136, 81, 248, 11
-  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 93, 94, 41, 11
-  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 136, 94, 248, 11
-  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 398, 41, 73, 10
-  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 398, 53, 66, 10
-  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 440, 66, 29, 11
-  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX|BS_TOP|BS_MULTILINE, 399, 81, 102, 17
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 41, 60, 11
-  CONTROL "", 140, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 53, 60, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 562, 66, 31, 11
-  CONTROL "", 161, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 595, 66, 61, 40
-  CONTROL "", 410, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 79, 60, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 40, 40, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 52, 237, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 253, 426, 41, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 296, 426, 167, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 93, 64, 41, 11
+  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 136, 64, 194, 11
+  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 51, 91, 73, 10
+  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 51, 103, 66, 10
+  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 93, 77, 29, 11
+  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX|BS_TOP|BS_MULTILINE, 51, 116, 151, 10
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 422, 43, 60, 11
+  CONTROL "", 140, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 422, 55, 60, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 389, 68, 31, 11
+  CONTROL "", 161, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 422, 68, 61, 40
+  CONTROL "", 410, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 422, 81, 60, 11
   CONTROL "", 500, "SysTreeView32", NOT WS_VISIBLE|TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 43, 394, 115, 64
-  CONTROL "", 600, "SysTreeView32", NOT WS_VISIBLE|TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 161, 392, 115, 66
-  CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 44, 113, 50, 14
-  CONTROL "&Modificar [F3]", 520, "Button", WS_TABSTOP, 99, 113, 50, 14
-  CONTROL "&Eliminar [F4]", 530, "Button", WS_TABSTOP, 153, 113, 50, 14
-  CONTROL "&Zoom", 540, "Button", WS_TABSTOP, 208, 113, 50, 14
-  CONTROL "S&ubir", 550, "Button", WS_TABSTOP, 263, 113, 50, 14
-  CONTROL "&Bajar", 560, "Button", WS_TABSTOP, 318, 113, 50, 14
-  CONTROL "Ocultar Esc&ll.", 570, "Button", WS_TABSTOP, 373, 113, 50, 14
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 44, 129, 617, 169
+  CONTROL "", 600, "SysTreeView32", NOT WS_VISIBLE|TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 500, 42, 154, 81
+  CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 44, 132, 50, 14
+  CONTROL "&Modificar [F3]", 520, "Button", WS_TABSTOP, 99, 132, 50, 14
+  CONTROL "&Eliminar [F4]", 530, "Button", WS_TABSTOP, 153, 132, 50, 14
+  CONTROL "&Zoom", 540, "Button", WS_TABSTOP, 208, 132, 50, 14
+  CONTROL "S&ubir", 550, "Button", WS_TABSTOP, 263, 132, 50, 14
+  CONTROL "&Bajar", 560, "Button", WS_TABSTOP, 318, 132, 50, 14
+  CONTROL "Ocultar Esc&ll.", 570, "Button", WS_TABSTOP, 373, 132, 50, 14
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 44, 148, 617, 151
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 50, 313, 80, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 131, 313, 55, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 50, 326, 80, 11
@@ -15280,25 +15280,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 350, "Static", SS_RIGHT|WS_GROUP, 557, 343, 100, 8
   CONTROL "", 380, "Static", WS_GROUP, 468, 354, 34, 16
   CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 557, 354, 100, 16
-  CONTROL "Código", -1, "Static", WS_GROUP, 51, 45, 27, 8
-  CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 44, 30, 344, 39
+  CONTROL "Código", -1, "Static", WS_GROUP, 51, 43, 27, 8
+  CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 44, 30, 290, 99
   CONTROL "Descuentos", -1, "Button", BS_GROUPBOX, 44, 301, 149, 68
   CONTROL "Neto", -1, "Static", WS_GROUP, 468, 332, 34, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 468, 343, 34, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 57, 27, 8
-  CONTROL "Fechas de vigencia", -1, "Button", BS_GROUPBOX, 510, 29, 151, 79
-  CONTROL "Inicio", -1, "Static", WS_GROUP, 517, 44, 22, 8
-  CONTROL "Fin", -1, "Static", WS_GROUP, 517, 56, 15, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 55, 27, 8
+  CONTROL "Fechas de vigencia", -1, "Button", BS_GROUPBOX, 337, 31, 151, 98
+  CONTROL "Inicio", -1, "Static", WS_GROUP, 344, 46, 22, 8
+  CONTROL "Fin", -1, "Static", WS_GROUP, 344, 58, 15, 8
   CONTROL "Bruto", -1, "Static", WS_GROUP, 468, 321, 34, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 71, 344, 39
-  CONTROL "Proxima factura", -1, "Static", WS_GROUP, 518, 82, 54, 8
-  CONTROL "Documento de venta", -1, "Button", BS_GROUPBOX, 391, 30, 115, 79
-  CONTROL "Serie", -1, "Static", WS_GROUP, 398, 69, 27, 8
-  CONTROL "Forma pago", -1, "Static", WS_GROUP, 51, 97, 40, 8
+  CONTROL "Proxima factura", -1, "Static", WS_GROUP, 345, 84, 54, 8
+  CONTROL "Serie", -1, "Static", WS_GROUP, 51, 80, 27, 8
+  CONTROL "Forma pago", -1, "Static", WS_GROUP, 51, 67, 40, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Plantilla venta automática", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Grupo", -1, "Static", WS_GROUP, 51, 84, 25, 8
-  CONTROL "Periodicidad", -1, "Static", WS_GROUP, 517, 69, 44, 8
+  CONTROL "Grupo", -1, "Static", WS_GROUP, 211, 429, 25, 8
+  CONTROL "Periodicidad", -1, "Static", WS_GROUP, 344, 71, 44, 8
+  CONTROL "Grupos", -1, "Button", BS_GROUPBOX, 491, 30, 168, 98
 }
 
 FACAUT_2 DIALOG DISCARDABLE 16, -70, 670, 375
