--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19126,6 +19126,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 276, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 276, 50, 14
+  CONTROL "&Quitar filtro", 3, "Button", WS_TABSTOP, 44, 276, 50, 14
 }
 
 FASTFILTROS_DEFINICION DIALOG DISCARDABLE 9, 8, 439, 223
