--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2390,5 +2390,6 @@ FONT 14, "Segoe UI"
   CONTROL "0,01", 280, "Button", WS_TABSTOP, 107, 117, 24, 16
   CONTROL "", 290, "Button", WS_TABSTOP, 132, 117, 24, 16
   CONTROL "", 110, "Button", WS_TABSTOP, 107, 1, 24, 16
+  CONTROL "", 300, "Button", WS_TABSTOP, 132, 101, 24, 16
 }
 
