--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11419,17 +11419,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 25, 27, 8
 }
 
-SITUACION DIALOG DISCARDABLE 77, 58, 217, 51
+SITUACION DIALOG DISCARDABLE 77, 58, 281, 48
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 50, 9, 158, 11
-  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 54, 30, 50, 14
-  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 109, 30, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 164, 30, 50, 14
-  CONTROL "General", -1, "Button", BS_GROUPBOX, 2, 1, 211, 23
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 9, 12, 39, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 9, 226, 11
+  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
+  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 226, 27, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
 DESGPUNTOS DIALOG DISCARDABLE 175, 153, 153, 101
@@ -19291,5 +19289,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedades para el terminal punto de venta táctil", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
   CONTROL "Color botón", -1, "Static", WS_GROUP, 49, 76, 41, 8
   CONTROL "Orden", -1, "Static", WS_GROUP, 49, 102, 25, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+EDITMEMO DIALOG DISCARDABLE 77, 58, 281, 116
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Edición de expresiones"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 4, 4, 272, 85
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 96, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 96, 50, 14
 }
 
